# mspr-user-api

./: .drone.yml  .eslintrc.js  .gitignore  .nycrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  schema.json  schema.prisma  schema.sql  tsconfig.json
.kube/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
.semver/: main.py
migrations/2020-02-25-144242_create_user/: down.sql  up.sql
migrations/20200304114133-init/: README.md  schema.prisma  steps.json
mock/: user.ts
src/: app.ts  db.rs  lib.rs  models.rs  routes.ts  routing.ts  schema.rs  server.ts
src/handlers/: healthHandler.ts  userHandler.ts
src/models/: error.ts  health.ts  user.ts
src/routes/: health.ts  user.ts
src/routes/api/: users.ts
src/utils/: parse.ts  user.type.ts
tests/: example-test.ts
tests/integration/: user.ts
tests/unit/: user.ts
